--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.1",
     "@angular/material": "^8.1.1",
     "@angular/material-moment-adapter": "^8.1.2",
@@ -25,6 +26,7 @@
     "angular-material": "^1.1.19",
     "angularfire2": "^5.2.1",
     "firebase": "^6.3.3",
+    "firebase-admin": "^8.4.0",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
