--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.1",
     "@angular/material": "^8.1.1",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "angularfire2": "^5.2.1",
-    "firebase": "^6.3.3",
+    "firebase": "^6.4.2",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
