--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "~8.1.1",
     "angular-material": "^1.1.19",
     "angularfire2": "^5.2.1",
+    "chart.js": "^2.8.0",
     "firebase": "^6.3.3",
     "firebase-admin": "^8.4.0",
     "moment": "^2.24.0",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
